--- a/backend-java/src/main/resources/application.properties
+++ b/backend-java/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=omarweb
 
 # 📌 Configuración de la base de datos PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/miapp
-spring.datasource.username=postgres
-spring.datasource.password=tu_contraseña
+spring.datasource.username=omar
+spring.datasource.password=omar123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8081
